# repro-bazel-issue

./: BUILD.bazel  WORKSPACE
lex/: BUILD.bazel  all_keywords.go  lib.go  lib_test.go
