load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lex",
    srcs = ["lib.go"],
    importpath = "github.com/otan-corkroach/repro-bazel-issue/lex",
    visibility = ["//visibility:public"],
    data = [":gen"],
)

go_binary(
    "allkeywords",
    srcs = ["all_keywords.go"],
    gotags = ["allkeywords"],
)

go_test(
    name = "lex_test",
    srcs = ["lib_test.go"],
    embed = [":lex"],
)

genrule(
    name = "gen",
    outs = ["out.txt"],
    cmd = """echo hi > $@""",
    tools = [":allkeywords"],
)
